<resources>
    <string name="app_name">Guess the movie</string>
    <string name="start">Начать</string>
    <string name="favorite">Избранное</string>
    <string name="back">Назад</string>
    <string name="level">Список уровней</string>
    <string name="level1">Уровень 1</string>
    <string name="level2">Уровень 2</string>
    <string name="level3">Уровень 3</string>
    <string name="level4">Уровень 4</string>
    <string name="level5">Уровень 5</string>
    <string name="level6">Уровень 6</string>
    <string name="level7">Уровень 7</string>
    <string name="level8">Уровень 8</string>
    <string name="level9">Уровень 9</string>
    <string name="level10">Уровень 10</string>
    <string name="progress_level">Угадано фильмов: </string>
    <string name="coins">Монеты: </string>
    <string name="filling">_ _ _</string>
</resources>